--- a/projects/loading-bar/package.json
+++ b/projects/loading-bar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dannyboyng/loading-bar",
   "description": "An Angular library to display a loading bar to indicate that the app is busy",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license" : "MIT",
   "keywords": [
     "loader",
@@ -10,6 +10,10 @@
     "angular",
     "angular 6+"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DannyBoyNg/LoadingBar.git"
+  },
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
