--- a/projects/loading-bar/package.json
+++ b/projects/loading-bar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dannyboyng/loading-bar",
   "description": "An Angular library to display a loading bar to indicate that the app is busy",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "license" : "MIT",
   "keywords": [
     "loader",
@@ -15,9 +15,9 @@
     "url": "https://github.com/DannyBoyNg/LoadingBar.git"
   },
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/material": "^6.3.0",
-    "@angular/cdk": "^6.3.0"
+    "@angular/common": ">=6.0.0 <9.0.0",
+    "@angular/core": ">=6.0.0 <9.0.0",
+    "@angular/material": ">=6.0.0 <9.0.0",
+    "@angular/cdk": ">=6.0.0 <9.0.0"
   }
 }
