--- a/projects/loading-bar/package.json
+++ b/projects/loading-bar/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/DannyBoyNg/LoadingBar.git"
   },
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
     "@angular/common": ">=6.0.0 <12.0.0",
     "@angular/core": ">=6.0.0 <12.0.0",
